update first Styling

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             <a href="#">CharlyTango Heute</a>
             <a href="#">In Gedanken</a>
             <a href="#">Neuanmeldung</a>
-            <a href="#">Was sind freie Funknetze</a>
             <a href="#">Mitgliederliste</a>
             <a href="#">Neue Mitglieder</a>
             <a href="#">QSL-Karten</a>
@@ -88,6 +87,40 @@
             <a href="#">TS-3 Gateway Commander</a>
             <a href="#">TS-3 Schnellconect</a>
             <a href="#">Bllick auf TS-3 Server</a>
+        </nav>
+        
+        <!--GW-Technik-Menü-->
+        <nav class="d-flex column txt-center">
+            <a>GW-Technik</a>
+            <a href="#">Einfaches Interface</a>
+            <a href="#">Soundkarteninterface</a>
+            <a href="#">Mikrofonbelegung CB</a>
+            <a href="#">Mikrofonbelegung PMR</a>
+            <a href="#">Anschluss an PC</a>
+        </nav>
+        <!--Weather-->
+        <nav class="d-flex column txt-center">
+            <a>Wetter Info</a>
+            <a href="#">Blitzradar</a>
+            <a href="#">Wetterwarnung</a>
+            <a href="#">Blitzortung</a>
+        </nav>
+        <!--Funkbereich-->
+        <nav class="d-flex column txt-center">
+            <a>Funkbereich</a>
+            <a href="#">Was sind freie Funknetze</a>
+            <a href="#">Geschichte CB-Funk</a>
+            <a href="#">Bandplan CB 11m</a>
+            <a href="#">Bandplan Freenet 149MhZ</a>
+            <a href="#">Bandplan PMR 446MhZ</a>
+            <a href="#">CB Einsatzgebiete</a>
+            <a href="#">CB Betriebsart</a>
+            <a href="#">Abkürzungen im CB</a>
+            <a href="#">CB-Sprache</a>
+            <a href="#">Regeln</a>
+            <a href="#">Notruf</a>
+            <a href="#">CB-Funk SWR</a>
+            <a href="#">Buchstabier-Alphabet</a>
         </nav>
 
 
