Styling Member Country List / member-json / render flag + name

--- a/neues-mitglied.html
+++ b/neues-mitglied.html
@@ -34,35 +34,36 @@
     </p>
 </div>
 
-<div class=" w-100 d-flex justify-center align-center txt-center">
-    <form class="contact-form" action="#" method="post" class="clear">
-        <h3>Kontaktformular</h3>
-        <div id="formName" class="clear">
-        <div id="formtAnrede" class="clear formdiv">
-        <div class="layout">
-        <label for="anrede">Anrede:*</label>
-        <select name="anrede" id="anrede">
-        <option value="Herr">Herr</option>
-        <option value="Frau">Frau</option>
-        <option value="Dipl. Ing.">Dipl. Ing.</option>
-        <option value="Prof.">Prof.</option>
-        <option value="Prof. Dr.">Prof. Dr.</option>
-        <option value="Herr Dr.">Herr Dr.</option>
-        <option value="Frau Dr.">Frau Dr.</option>
-        </select>
-        </div>
-        </div>
-        <div class="clear formdiv">
-            <div class="layout">
-            <label for="vorname">Vorname:*</label>
-            <input value="" type="text" name="vorname" id="vorname">
-            </div>
-            <div class="layout">
-                <label class="formright" for="nachname">Nachname:*</label>
-                <input value="" class="inputright" type="text" name="nachname" id="nachname">
-            </div>
+            <div class=" w-100 d-flex justify-center align-center txt-center">
+                <form class="contact-form" action="#" method="post" class="clear">
+                    <h3>Kontaktformular</h3>
+                    <div id="formName" class="clear">
+                        <div id="formtAnrede" class="clear formdiv">
+                            <div class="layout">
+                                <label for="anrede">Anrede:*</label>
+                    <select name="anrede" id="anrede">
+                    <option value="Herr">Herr</option>
+                    <option value="Frau">Frau</option>
+                    <option value="Dipl. Ing.">Dipl. Ing.</option>
+                    <option value="Prof.">Prof.</option>
+                    <option value="Prof. Dr.">Prof. Dr.</option>
+                    <option value="Herr Dr.">Herr Dr.</option>
+                    <option value="Frau Dr.">Frau Dr.</option>
+                    </select>
+                    </div>
+                    </div>
+                    <div class="clear formdiv">
+                        <div class="layout">
+                        <label for="vorname">Vorname:*</label>
+                        <input value="" type="text" name="vorname" id="vorname">
+                        </div>
+                        <div class="layout">
+                            <label class="formright" for="nachname">Nachname:*</label>
+                            <input value="" class="inputright" type="text" name="nachname" id="nachname">
+                        </div>
         </div>
         </div> <!-- end kontaktName -->
+
         <div id="kontaktAdresse" class="clear">
         <div class="clear formdiv">
         <div class="layout">
@@ -104,7 +105,8 @@
         <p style="margin-top:20px;">Die mit * gekennzeichneten Felder müssen ausgefüllt werden.</p>
         <p style="margin-top:20px;">Wir nehmen den Datenschutz sehr ernst und<br> 
             gehen sorgsam mit Ihren Daten um. Lesen Sie die<br> 
-            <a href="https://www.gratis-kontaktformular.de/dsgvo.php" target="_blank" style="text-decoration: underline;">Datenschutzerklï¿½rung</a>
+            <a href="https://www.gratis-kontaktformular.de/dsgvo.php" target="_blank" style="text-decoration: underline;">
+                Datenschutzerklärung</a>
              von diesem Kontaktformular.</p>
         <input style="color:#666666 !important;" type="submit" name="submit" id="sendkontakt" value="Absenden">
         </form>
