styling member list only country/ callsign and styling member list

--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -28,6 +28,13 @@
         <img src="./assets/img/kodax-02.gif" alt="">
     </div>
     <div class="member-List">
+        <div class="d-flex column w-100 justify-center align-center margin-bottom-30px">
+            <h2>Mitgliederliste</h2>
+            <p class="txt-center">
+                Mitgliederliste, CT-Kürzel nach Ländern<br>
+                Klicke auf die Länder für weitere Informationen
+            </p>
+        </div>
         <div id="allMemberList"></div>
     </div>
 
