submenu Funkbereich / navbar open body overflow hidden / overlay transparent gray

--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
     <script src="./assets/javascript/about-us.js"></script>
     <title>DX-CharlyTango About</title>
