--- a/alphabet.html
+++ b/alphabet.html
@@ -7,6 +7,7 @@
     <title>DX-CharlyTango</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
     <script src="./assets/javascript/alphabet.js"></script>
 </head>
