--- a/ct-today.html
+++ b/ct-today.html
@@ -9,6 +9,7 @@
 <body class="bg-page font-family-roboto-mono">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </body>
     <!--Navbar Top-->
@@ -34,7 +35,7 @@
             <h3>Wolfgang Müller</h3>
             Bissendorf<br>
             <br>
-            Betriber und Webmaster
+            Betreiber und Webmaster
         </p>
     </div>    
 </div>
