--- a/neues-mitglied.html
+++ b/neues-mitglied.html
@@ -9,6 +9,7 @@
 <body class="bg-page font-family-roboto-mono">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </body>
     <!--Navbar Top-->
