--- a/cb-bandplan11m.html
+++ b/cb-bandplan11m.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
-    <script src="./assets/javascript/ct-occupancy.js"></script>
+    <script src="./assets/javascript/cb-bandplan11m.js"></script>
 </head>
-<body onload="initCbOccupancy()" class="bg-page">
+<body onload="initCbBandplan()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -21,24 +21,19 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Mikrofonbelegung CB-Funkeräte</h2>
-            <img class="microphone-assignment margin-top-30px margin-bottom-30px txt-center" src="./assets/img/mike-stecker.gif" alt="">
-            <table  style="overflow-x:auto" class="mobile-table" id="microphoneAssignment">
-                <thead>
+            <h2>
+                CB-Funk Frequenzen
+            </h2>
+            <div class="w-100 d-flex justify-center">
+                <table id="cbChannelList">
                     <tr>
-                        <th>Gerätetyp</th>
-                        <th>Steckertyp</th>
-                        <th>Pin 1</th>
-                        <th>Pin 2</th>
-                        <th>Pin 3</th>
-                        <th>Pin 4</th>
-                        <th>Pin 5</th>
-                        <th>Pin 6</th>
-                        <th>Pin 7</th>
-                        <th>Pin 8</th>
+                        <th>CB-Kanal</th>
+                        <th>MHZ</th>
+                        <th>Modulationsart</th>
+                        <th>Verwendung</th>
                     </tr>
-                </thead>    
-            </table>
+                </table>
+            </div>
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
