--- a/pr-geschichte.html
+++ b/pr-geschichte.html
@@ -7,6 +7,7 @@
     <title>DX-CharlyTango</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
 <body onload="initFrequenzList()" class="bg-page">
